<resources>
    <string name="app_name">PersonasMaterialDiplomado</string>
    <string name="action_settings">Settings</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="guardar">Guardar</string>
    <string name="limpiar">Limpiar</string>
    <string name="crear">Crear Personas</string>

    <string name="mensaje_guardado">Persona Guardada Exitosamente!</string>
    <string name="cedula">Cédula</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="informacion">INFORMACIÓN</string>
    <string name="sexo">Sexo</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
    <string-array name="sexo">
        <item>@string/masculino</item>
        <item>@string/femenino</item>
    </string-array>
    <string name="titulo_eliminar_mensaje">Eliminar Persona</string>
    <string name="eliminar_mensaje">¿Está seguro que desea elminar a esta persona?</string>
    <string name="si_eliminar_mensaje">Si</string>
    <string name="no_eliminar_mensaje">No</string>
    <string name="no_vacio_error">Este campo no puede estar vacío</string>
    <string name="persona_existente_error">Ya existe una persona ingresada con esta cédula</string>
    <string name="editar">Editar Persona</string>
    <string name="restaurar">Restaurar</string>

</resources>
